--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <H1>Фото и Аэросъемка</H1>
-    <h2>Недвижимости, строительных объектов и участков в Казани</h2>
+    <h2>съемка недвижимости, строительных объектов и участков в Казани</h2>
 </body>
 </html>
