--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>фото и аэросъемка в Казани</title>
-</head>
-<body>
-    <H1>Фото и Аэросъемка</H1>
+  </head>
+  <body>
+    <h1>Фото и Аэросъемка</h1>
     <h2>Недвижимости, строительных объектов и участков в Казани</h2>
-</body>
+  </body>
 </html>
