--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>фото и аэросъемка недвижимости и строительных объектов</title>
+    <title>фото и аэросъемка недвижимости и строительных объектов в Казани</title>
   </head>
   <body>
     <h1>Фото и Аэросъемка</h1>
-    <h2>фото и аэросъемка недвижимости и строительных объектов</h2>
+    <h2>фото и аэросъемка недвижимости и строительных объектов в Казани</h2>
   </body>
 </html>
